# esnn

./: README.org  pyproject.toml  shell.nix
esnn/: demo.py  encoder.py  esnn.py  neuron.py
esnn/demos/: iris.py  mnist.py
tests/: test_esnn.py
