[tool.poetry]
name = "esnn"
version = "0.1.0"
description = ""
authors = ["Jethro Kuan <jethrokuan95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
demo = "esnn:demo"